# rustpotter-cli

./: .gitignore  Cargo.toml  README.md  build.rs  test.sh
.github/workflows/: main.yml
src/: main.rs  pv_recorder_utils.rs  utils.rs
src/cli/: build.rs  build_model.rs  build_ref.rs  devices.rs  filter.rs  mod.rs  record.rs  spot.rs  test.rs  test_model.rs  train.rs
tools/: Dockerfile  install.sh
