[package]
name = "rustpotter-cli"
version = "2.0.4"
edition = "2021"
license = "Apache-2.0"
description = "CLI for Rustpotter, an open source wakeword spotter forged in rust."
authors = ["Miguel Álvarez Díez <miguelwork92@gmail.com>"]
repository = "https://github.com/GiviMAD/rustpotter"
exclude = ["tools/**",".github",".gitignore"]
[dependencies]
rustpotter = { version = "2.0.1", features = ["debug", "internals"] }
ctrlc = "3.2.2"
clap = { version = "4.1.6", features = ["derive"] }
hound = "3.4.0"
cpal = "0.15.0"
time = "0.3.20"
