[package]
name = "rustpotter-cli"
version = "3.0.0-beta.5"
edition = "2021"
license = "Apache-2.0"
description = "CLI for Rustpotter, an open source wakeword spotter forged in rust."
authors = ["Miguel Álvarez Díez <miguelwork92@gmail.com>"]
repository = "https://github.com/GiviMAD/rustpotter"
exclude = ["tools/**",".github",".gitignore"]
[dependencies]
rustpotter = { version = "3.0.0-beta.5", features = ["debug", "audio", "record"] }
ctrlc = "3.2.2"
clap = { version = "4.1.6", features = ["derive"] }
hound = "3.4.0"
cpal = "0.15.2"
time = "0.3.20"
gag = "1.0.0"